# uav-vision-gazebo

./: .gitignore  .gitmodules  README.md  README_HOW_TO_RUN.md  README_PX4_CONTROL.md  check_env.sh  setup.bash
install/: local_setup.sh  setup.sh
install/drone_bridge/share/drone_bridge/: package.ps1  package.sh  package.xml  package.zsh
install/drone_bridge/share/drone_bridge/launch/: gz_bridge.launch.py
install/drone_bridge/share/drone_bridge/scripts/: camera_viewer.py
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_test
ros2_ws/src/drone_bridge/: REFERENCE_CARD.txt  package.xml  reference_card.py  setup.cfg  setup.py
ros2_ws/src/drone_bridge/scripts/: verify_setup.py
scripts/: run_orbit.sh  test_detection.py  upload_demo_video.sh
src/drone_sim/: README_PX4_TAKEOFF_CONTROLLER.md  package.xml  setup.py
src/drone_sim/config/: baylands.sdf
src/drone_sim/drone_sim/: coord_convert.py  drone_controller.py  image_collector.py  imu_camera_collector.py  orbit_data_collector.py  orbit_detection.py  px4_takeoff_controller.py  realtime_detector.py
src/drone_sim/launch/: baylands_px4.launch.py
src/drone_sim/models/baylands_1/: model.sdf
src/drone_sim/models/baylands_1/meshes/: Textures
src/drone_sim/models/house_2/: model.sdf
src/drone_sim/models/house_3/: model.sdf
src/drone_sim/models/nathan_benderson_park/: model.sdf
src/drone_sim/models/oak_tree/: model.sdf
src/drone_sim/models/pine_tree/: model.sdf
src/drone_sim/models/stop_sign/: model.sdf
(+8 files in other folders)
